Fix: 投稿詳細ページのレイアウトを修正（暫定の完成）

--- a/app/views/items/_item_image.html.slim
+++ b/app/views/items/_item_image.html.slim
@@ -1,7 +1,7 @@
 - item_image.items.each do |item|
   .column.is-half-mobile.is-one-third-desktop
     .card id="item-id-#{item.id}"
-      = link_to item_path(item)
+      = link_to item_path(item), class: 'has-text-white'
         .card-image
           figure.image.is-5by4
             = image_tag item.image, alt: 'item-img'
