--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -7,62 +7,77 @@
         .container
           .media
             .media-left
-              figure.image.is-48x48
+              figure.image.is-32x32
                 = link_to user_path(@post.user)
                   = image_tag @post.user.image_url(:thumb), class: 'is-rounded'
             .media-content
-              p.title.is-4
-                = @post.user.name
-              p.subtitle.is-6.has-text-light
-                = 
+              p.title.has-text-weight-bold.is-5
+                = link_to user_path(@post.user), class: 'has-text-white' do
+                  = @post.user.name
+              p.subtitle.is-7.has-text-light
+                = 'カテゴリー：'
+                = link_to category_path(@post.categories[0].name) do
+                  = @post.categories[0].name 
 
 main
   section.columns.is-centered
     .column.is-three-quarters
       .section
         .container
-          .columns.is-12
-            .column.is-7
-              .column
-                figure.image.is-4by3.is-fullwidth-mobile
-                  = image_tag @post.post_images.first.image_url(:main)
-              .column.is-hidden-mobile
-                p.title.has-text-weight-bold.is-5
-                  = t('activerecord.models.comment')
-                = render @comments
-                -  if logged_in?
-                  article.media
-                    figure.media-left
-                      p.image.is-48x48
-                        = image_tag current_user.image_url(:thumb), class: 'is-rounded'
-                    .media-content
-                      = render 'comments/form', { post: @post, comment: @comment }
-            .column.is-5
-              .column.box
-                / .media
-                /   .media-left
-                /     figure.image.is-48x48
-                /       = link_to user_path(@post.user)
-                /         = image_tag @post.user.image_url(:thumb), class: 'is-rounded'
-                /   .media-content
-                /     p.title.is-5
-                /       = @post.user.name
-                /     p.subtitle.is-6
-                /       = l @post.created_at, format: :short
-                /   .media-right
-                /     span.tag.is-light.is-rounded
-                /       = @post.categories[0].name
-                p.title.has-text-weight-bold.is-5
-                  | デスクデータ
-                p.is-size-7
-                  = 'カテゴリー：'
-                  = link_to category_path(@post.categories[0].name) do
-                    = @post.categories[0].name
-                  = '　投稿日時：'
-                  = l @post.created_at, format: :short
-                br
-                = safe_join(@post.body.split("\n"),tag(:br))
-              .column
+          .tile.is-ancestor
+            .tile.is-7.is-parent.is-vertical
+              .tile
+                .tile.is-vertical
+                  .tile.is-child
+                    figure.image.is-4by3
+                      = image_tag @post.post_images.first.image_url(:main)
+                  / デスクトップ表示用コメント欄
+                  .tile.is-child.is-hidden-mobile
+                    p.title.has-text-weight-bold.is-5
+                      = t('activerecord.models.comment')
+                    = render @comments
+                    - if logged_in?
+                      .media
+                        figure.media-left
+                          p.image.is-48x48
+                            = image_tag current_user.image_url(:thumb), class: 'is-rounded'
+                        .media-content
+                          = render 'comments/form', { post: @post, comment: @comment }
+                    - else
+                      br
+                        p.has-text-centered
+                          | ログインするとコメントできます
+
+            .tile.is-parent.is-vertical
+              .tile.is-child
+                .card
+                  header.card-header
+                    p.card-header-title.is-size-5
+                      | デスクデータ
+                    .card-header-icon
+                      span.icon
+                        = render 'likes/like', post: @post
+                      span.icon
+                        = render 'bookmarks/bookmark', post: @post
+                      - if current_user&.own?(@post)
+                        = render 'crud_menus', post: @post
+                  .card-content
+                    .content
+                      - if @post.body.present?
+                        = safe_join(@post.body.split("\n"),tag(:br))
+                      - else
+                        p.has-text-centered
+                          | No comment..
+                    p
+                      time
+                        = l @post.created_at, format: :short
+                  footer.card-footer
+                    = link_to "https://twitter.com/share?url=#{request.url}&text=#{@post.user.name}のデスク&hashtags=Buildesk,デスク周り,デスクツアー", title: 'Twitter', target: '_blank', class: 'card-footer-item'
+                      span.icon-text
+                        i.fab.fa-twitter
+                        = 'シェアする'
+                
+              .tile.is-child
                 p.title.has-text-weight-bold.is-5
                   | アイテム
                 .columns.is-multiline.is-mobile.is-variable.is-1-desktop.is-1-mobile
@@ -70,60 +85,26 @@ main
                     = render 'items/item_image', { item_image: @post }
                   - else
                     .column
-                      .p.has-text-centered
+                      p.has-text-centered
                         | Not registered..
-          .columns.is-12
-            .column
-              / orderクラスが使えなかったのでis-hidden-desktopクラスで表示順を対応
-              .column.is-hidden-desktop
+            / モバイル表示用コメント欄
+            .tile.is-parent.is-hidden-desktop
+              .tile.is-child
                 p.title.has-text-weight-bold.is-5
                   = t('activerecord.models.comment')
                 = render @comments
-                -  if logged_in?
+                - if logged_in?
                   article.media
                     figure.media-left
                       p.image.is-48x48
                         = image_tag current_user.image_url(:thumb), class: 'is-rounded'
                     .media-content
                       = render 'comments/form', { post: @post, comment: @comment }
-              / .tile
-              /   .tile.is-7.is-parent
-              /     .tile.is-child
-              /       p.title.has-text-weight-bold.is-5
-              /         = t('activerecord.models.comment')
-              /       = render @comments
-              /       -  if logged_in?
-              /         article.media
-              /           figure.media-left
-              /             p.image.is-48x48
-              /               = image_tag current_user.image_url(:thumb), class: 'is-rounded'
-              /           .media-content
-              /             = render 'comments/form', { post: @post, comment: @comment }
-                  
-            / .column.is-12
-            /   .columns
-            /     .column.is-7
-            /       figure.image.is-4by3.is-fullwidth-mobile
-            /         = image_tag @post.post_images.first.image_url(:main)
-              
-  / .row
-  /   .col-sm-4.col-md-6
-  /     = image_tag @post.post_images.first.image_url(:main), size: '600x400'
-  /   .col-sm-3.col-md-6
-  /     .card
-  /       .card-body
-  /         ul class='list-inline'
-  /           li class='list-inline-item'
-  /             = link_to user_path(@post.user) do
-  /               = image_tag @post.user.image_url, class: 'rounded-circle', size: '30x30'
-  /           li class='list-inline-item'
-  /             = @post.user.name
-  /           p
-  /             = @post.body
-  /           li class='list-inline-item'
-  /             = l @post.created_at, format: :short
-  /           li class='list-inline-item'
-  /             = render 'posts/crud_menus', post: @post if current_user&.own?(@post)
+                - else
+                  br
+                    p.has-text-centered
+                      | ログインするとコメントできます
+
   /           - unless current_user&.own?(@post)
   /             li class='list-inline-item'
   /               = render 'likes/like', post: @post
@@ -162,3 +143,62 @@ main
                           = render 'comments/form', { post: @post, comment: @comment }
                 .tile.is-parent.is-5.is-vertical
                   .tile.is-child.box.order2
+
+/ カラム表示
+/main
+  section.columns.is-centered
+    .column.is-three-quarters
+      .section
+        .container
+          .columns.is-12
+            .column.is-7
+              .column
+                figure.image.is-4by3.is-fullwidth-mobile
+                  = image_tag @post.post_images.first.image_url(:main)
+              .column.is-hidden-mobile
+                p.title.has-text-weight-bold.is-5
+                  = t('activerecord.models.comment')
+                = render @comments
+                -  if logged_in?
+                  article.media
+                    figure.media-left
+                      p.image.is-48x48
+                        = image_tag current_user.image_url(:thumb), class: 'is-rounded'
+                    .media-content
+                      = render 'comments/form', { post: @post, comment: @comment }
+            .column.is-5
+              .column.box
+                p.title.has-text-weight-bold.is-5
+                  | デスクデータ
+                p.is-size-7
+                  = 'カテゴリー：'
+                  = link_to category_path(@post.categories[0].name) do
+                    = @post.categories[0].name
+                  = '　投稿日時：'
+                  = l @post.created_at, format: :short
+                br
+                = safe_join(@post.body.split("\n"),tag(:br))
+              .column
+                p.title.has-text-weight-bold.is-5
+                  | アイテム
+                .columns.is-multiline.is-mobile.is-variable.is-1-desktop.is-1-mobile
+                  - if @post.items.present?
+                    = render 'items/item_image', { item_image: @post }
+                  - else
+                    .column
+                      .p.has-text-centered
+                        | Not registered..
+          .columns.is-12
+            .column
+              / orderクラスが使えなかったのでis-hidden-desktopクラスで表示順を対応
+              .column.is-hidden-desktop
+                p.title.has-text-weight-bold.is-5
+                  = t('activerecord.models.comment')
+                = render @comments
+                -  if logged_in?
+                  article.media
+                    figure.media-left
+                      p.image.is-48x48
+                        = image_tag current_user.image_url(:thumb), class: 'is-rounded'
+                    .media-content
+                      = render 'comments/form', { post: @post, comment: @comment }
