--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -6,34 +6,16 @@ article.media
     .content
       p
         strong
-          = link_to user_path(comment.user) do
+          = link_to user_path(comment.user), class: 'has-text-white' do
             = comment.user.name
-        |    
-        small
+        br
+        = safe_join(comment.body.split("\n"),tag(:br))
+        br    
+        small.has-text-grey-lighter.is-size-7
           = time_ago_in_words(comment.created_at)
           = "前"
-        = safe_join(comment.body.split("\n"),tag(:br))
-    - if logged_in?
-      nav.level.is-mobile
-        .level-left
-          a.level-item
-            | Reply
   .media-right
     - if current_user&.own?(comment)
       = link_to comment_path(comment), method: :delete,
                                         data: { confirm: t('defaults.message.delete_confirm') } do
         button.delete
-      
-    
-      
-    
-
-  /- if current_user&.own?(comment)
-    td class="action"
-      ul class="list-inline justify-content-center" style="float: right;"
-        li class="list-inline-item"
-          a href="#" class='js-edit-comment-button' data-comment-id="#{comment.id}"
-            i class="fas fa-pen"
-        li class="list-inline-item"
-          a href="#" class='js-delete-comment-button' data-comment-id="#{comment.id}"
-            i class="fas fa-trash"
