--- a/app/views/likes/_like.html.slim
+++ b/app/views/likes/_like.html.slim
@@ -1,6 +1,6 @@
 - if current_user&.liked?(post)
   = link_to like_path(post), method: :delete, id: "button-like-#{post.id}" do
-    i class="fas fa-heart"
+    i.fas.fa-heart
 - else 
   = link_to post_likes_path(post), method: :post, id: "button-like-#{post.id}" do
-    i class="far fa-heart"
+    i.far.fa-heart
