--- a/app/views/posts/_crud_menus.html.slim
+++ b/app/views/posts/_crud_menus.html.slim
@@ -1,7 +1,6 @@
-ul class='crud-menu-btn list-inline float-right'
-  li class='list-inline-item'
-    = link_to edit_post_path(post), id: "button-edit-#{post.id}" do
-      i class="fas fa-pen"
-  li class='list-inline-item'
-    = link_to post_path(post), id: "button-delete-#{post.id}", method: :delete, data: { confirm: t('defaults.message.delete_confirm') } do
-      i class="fas fa-trash"
+span.icon
+  = link_to edit_post_path(post), id: "button-edit-#{post.id}" do
+    i.fas.fa-pen
+span.icon
+  = link_to post_path(post), id: "button-delete-#{post.id}", method: :delete, data: { confirm: t('defaults.message.delete_confirm') } do
+    i.fas.fa-trash
