--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -24,7 +24,7 @@
       .column
         .media-content
           .media-right
-            = image_tag 'sample.jpg', id: 'post_img_prev', class: 'is-4by3', width: '300'
+            = image_tag 'sample.jpg', id: 'post_img_prev', class: 'is-4by3', width: '400'
 
   .field.is-horizontal
     .field-label.is-normal
@@ -58,8 +58,9 @@
     .field-body
       .control
         #item-search-show.button
-          i.fas.fa-tags
-            | アイテムを選択する
+          span.icon-text
+            i.fas.fa-tags
+            |  アイテムを選択する
 
   .field.is-horizontal
     .field-label
