--- a/app/views/profiles/_form.html.slim
+++ b/app/views/profiles/_form.html.slim
@@ -1,4 +1,5 @@
 = form_with model: @user, url: profile_path, local: true do |f|
+  = render 'shared/error_messages', object: f.object
   .field
     label.label
       = f.label :name
