--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -1,16 +1,17 @@
 = simple_form_for @user do |f|
+  = render 'shared/error_messages', object: f.object
   .field
     .control
-      = f.input :name, label_html: { class: 'label' }, input_html: { class: 'input' }
+      = f.input :name, label_html: { class: 'label' }, input_html: { class: 'input' }, error: false
   .field
     .control
-      = f.input :email, label_html: { class: 'label' }, input_html: { class: 'input' }
+      = f.input :email, label_html: { class: 'label' }, input_html: { class: 'input' }, error: false
   .field
     .control
-      = f.input :password, label_html: { class: 'label' }, input_html: { class: 'input' }
+      = f.input :password, label_html: { class: 'label' }, input_html: { class: 'input' }, error: false
   .field
     .control
-      = f.input :password_confirmation, label_html: { class: 'label' }, input_html: { class: 'input' }
+      = f.input :password_confirmation, label_html: { class: 'label' }, input_html: { class: 'input' }, error: false
   .field
     .control
       = f.button :submit, class: %w[has-text-weight-bold button is-success is-fullwidth]
