--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -62,6 +62,7 @@
           span.icon-text
             i.fas.fa-tags
             |  アイテムを選択する
+        #item-results
 
   .field.is-horizontal
     .field-label
@@ -70,19 +71,24 @@
         .control
           = f.submit '投稿する', class: %w[button is-light has-text-weight-semibold is-rounded]
 
-/ モーダル部分
-#item-search-modal.item-search-modal-wrapper
-  .modal
-    #close-modal
-      i.fa.fa-2x.fa-times
-    #item-search-box.item-search-box
+#item-search-modal.modal
+  .modal-background
+  .modal-card
+    header.modal-card-head
+      .modal-card-title.has-text-weight-bold
+        = 'アイテムを検索'
+      button.delete[aria-label="close"]
+    section.modal-card-body.item-search-box
+      / 検索結果
+      #item_list.columns.is-multiline.is-mobile.is-variable.is-1-desktop.is-1-mobile
+      / 選択商品詳細
+      #item_detail
+    footer.modal-card-foot
       = form_with(url: search_path, method: :get, id: 'item_search') do |f|
-        .item-search-body
-          = f.text_field :keyword, id: 'js-search-keyword', placeholder: 'キーワードを入力'
-
-        .item-search-footer
-          = f.submit '検索', id: 'js-search-button', class: %w[btn btn-primary]
-  / 検索結果
-  #item_list
-  / 選択商品詳細
-  #item_detail
+        .field.has-addons.has-addons-centered
+          .control
+            = f.text_field :keyword, id: 'js-search-keyword', placeholder: 'キーワードを入力', class: 'input'
+          .control
+            = f.submit '検索', id: 'js-search-button', class: %w[button is-primary]
+          
+      
