--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -62,7 +62,10 @@
           span.icon-text
             i.fas.fa-tags
             |  アイテムを選択する
+
+        = f.hidden_field :items, multiple: true
         #item-results
+          
 
   .field.is-horizontal
     .field-label
