--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -57,15 +57,27 @@
     .field-label.is-normal
       = f.label :items, class: 'label'
     .field-body
-      .control
-        #item-search-show.button
-          span.icon-text
-            i.fas.fa-tags
-            |  アイテムを選択する
+      .field
+        .control
+          #item-search-show.button
+            span.icon-text
+              i.fas.fa-tags
+              |  アイテムを選択する
 
-        = f.hidden_field :items, multiple: true
-        #item-results
-          
+          = f.hidden_field 'items1', multiple: true
+          = f.hidden_field 'items2', multiple: true
+          = f.hidden_field 'items3', multiple: true
+          = f.hidden_field 'items4', multiple: true
+          = f.hidden_field 'items5', multiple: true
+          / .tile.is-ancestor
+          /   .tile.is-parent.is-vertical
+          /     .tile.is-child
+  .field.is-horizontal
+    .field-label
+    .field-body
+      .field
+        .control
+          #item-results.columns.is-multiline.is-mobile.is-variable.is-1-desktop.is-1-mobile
 
   .field.is-horizontal
     .field-label
