--- a/app/views/comments/_comment.html.slim
+++ b/app/views/comments/_comment.html.slim
@@ -1,7 +1,8 @@
 article.media id="comment-#{comment.id}"
   figure.media-left
     p.image.is-48x48
-      = image_tag comment.user.image_url(:thumb), class: 'is-rounded'
+      = link_to user_path(comment.user), class: 'has-text-white' do
+        = image_tag comment.user.image_url(:thumb), class: 'is-rounded'
   .media-content
     .content
       p
