Fix: 細かなレイアウト修正

--- a/app/views/items/show.html.slim
+++ b/app/views/items/show.html.slim
@@ -1,7 +1,7 @@
 - set_meta_tags title: t('.title'), og: { og_title: t('.og_title') }
 
 main
-  section.columns.is-centered
+  section.columns.is-centered.is-marginless
     .column.is-three-quarters
       .section
         .container
