--- a/app/views/posts/bookmarks.html.slim
+++ b/app/views/posts/bookmarks.html.slim
@@ -1,9 +1,10 @@
 - set_meta_tags title: t('.title')
 
-main.columns.is-centered
+main.columns.is-centered.is-marginless
   .column.is-three-quarters
-    section.section#new_arrival
+    section#new_arrival
       .container
+        br
         p.title.has-text-weight-bold
           = t('.title')
         .columns.is-multiline.is-mobile.is-variable.is-3-desktop.is-1-mobile
