--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -11,7 +11,7 @@ section.hero.hero-1.is-medium[style="background-image: linear-gradient(rgba(0, 0
 main
   .container        
     section.section#new_arrival
-      .columns
+      .columns.is-marginless
         .column
           h1.title.is-3.has-text-weight-bold
             = t('.New Arrival')
