--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,6 +1,6 @@
 - set_meta_tags title: t('.title', user: @user.name), og: { og_title: t('.og_title', user: @user.name) }
 
-main.columns.is-centered
+main.columns.is-centered.is-marginless
   .column.is-three-quarters
     section.section#new_arrival
       .container
