--- a/app/views/posts/new.html.slim
+++ b/app/views/posts/new.html.slim
@@ -1,6 +1,6 @@
 - set_meta_tags title: t('.title')
 
-main.columns.is-centered.section
+main.columns.is-centered.section.is-marginless
   .column.is-three-quarters
     section
       .content
