Fix: itemsテーブルにmakerカラムを追加した影響に伴う修正

--- a/app/views/admin/items/show.html.slim
+++ b/app/views/admin/items/show.html.slim
@@ -27,6 +27,11 @@
               = @item.name
           tr
             th[scope="row"]
+              = t('activerecord.attributes.item.maker')
+            td
+              = @item.maker
+          tr
+            th[scope="row"]
               = t('activerecord.attributes.item.price')
             td
               = @item.price
