--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -8,7 +8,8 @@
         .control
           #post-file-upload.file.has-name.is-fullwidth
             label.file-label.is-normal
-              = f.file_field :images, multiple: true, accept: 'image/*', class: 'file-input'
+              = f.file_field :images, multiple: true, accept: 'image/*', class: 'file-input', required: true
+              = f.hidden_field :image_cache
               span.file-cta
                 span.file-icon
                   i.fas.fa-upload
@@ -21,12 +22,6 @@
             | 画像形式: JPEG/PNG
           dt.has-text-grey-lighter.is-size-7.has-text-weight-semibold
             | 推奨サイズ: 4x3
-        / .content
-        /   dl
-        /     dt.has-text-grey-lighter.is-size-7.has-text-weight-semibold
-        /       | 画像形式: JPEG/PNG
-        /     dt.has-text-grey-lighter.is-size-7.has-text-weight-semibold
-        /       | 推奨サイズ: 4x3
       .column
         .media-content
           .media-right
@@ -58,7 +53,7 @@
             = b.label class: 'checkbox has-text-weight-semibold' do
               = b.check_box + " #{b.text}　"
         p.help.has-text-grey-lighter.is-size-7
-          | デスク用途に近しいものを選択してください
+          | デスク用途に近しいものを選択してください（必須）
               
   .field.is-horizontal
     .field-label.is-normal
@@ -70,8 +65,11 @@
             span.icon-text
               i.fas.fa-tags
               |  アイテムを選択する
-        p.help.has-text-grey-lighter.is-size-7
-          | アイテムは5つまで選択可能です
+        dl
+          dt.help.has-text-grey-lighter.is-size-7
+            | アイテムは5つまで選択可能です*
+          dt.has-text-grey-lighter.is-size-7
+            | 投稿後に選択・削除することはできません*
 
       = f.hidden_field 'items1', multiple: true
       = f.hidden_field 'items2', multiple: true
@@ -94,6 +92,9 @@
       .field
         .control
           = f.submit '投稿する', class: %w[button is-light has-text-weight-semibold is-rounded]
+  hr  
+  p.has-text-centered.is-size-7.has-text-grey-light
+    | *記載に関してはアップデート対応予定
 
 #item-search-modal.modal
   .modal-background
