--- a/app/views/posts/edit.html.slim
+++ b/app/views/posts/edit.html.slim
@@ -1,6 +1,6 @@
 - set_meta_tags title: t('.title')
 
-main.columns.is-centered.section
+main.columns.is-centered.section.is-marginless
   .column.is-three-quarters
     section
       .content
@@ -17,6 +17,7 @@ main.columns.is-centered.section
                 .control
                   - @form.images.each do |image|
                     = image_tag image.url, id: 'post_img_prev', class: 'is-4by3', width: '400'
+          
           .field.is-horizontal
             .field-label.is-normal
               = f.label :body, class: 'label'
@@ -24,6 +25,7 @@ main.columns.is-centered.section
               .field
                 .control
                   = f.text_area :body, class: 'textarea', placeholder: 'こだわりのポイントや現状の不満点など'
+          
           .field.is-horizontal
             .field-label.is-normal
               = f.label :area, class: 'label'
@@ -31,27 +33,39 @@ main.columns.is-centered.section
               .control
                 .select
                   = f.select :area, Post.areas_i18n.invert, include_blank: false
+          
           .field.is-horizontal
             .field-label
               = f.label :category_ids, class: 'label'
             .field-body
               .field
                 .control
-                  = f.collection_check_boxes :category_ids, Category.all, :id, :name, include_hidden: false do |b|
+                  = f.collection_check_boxes :category_ids, Category.all, :id, :name, { checked: @post.category_ids.map(&:to_param), include_hidden: false } do |b|
                     = b.label class: 'checkbox has-text-weight-semibold' do
-                      = b.check_box + b.text
+                      = b.check_box + " #{b.text}　"
+                p.help.has-text-grey-lighter.is-size-7
+                  | デスク用途に近しいものを選択してください（必須）
+          
           .field.is-horizontal
-            .field-label.is-normal
+            .field-label
               = f.label :items, class: 'label'
             .field-body
-              .control
-                #item-search-show.button
-                  span.icon-text
-                    i.fas.fa-tags
-                    |  アイテムを選択する
+              .field
+                .control
+                  dl
+                    dt.help.has-text-grey-lighter.is-size-7
+                      | アイテムの増減はできません*
+                  #item-results.columns.is-marginless.is-multiline.is-mobile.is-variable.is-1-desktop.is-1-mobile
+                    - if @form.items.present?
+                      = render 'items/item_image', { item_image: @form }
+
           .field.is-horizontal
             .field-label
             .field-body
               .field
                 .control
-                  = f.submit '投稿する', class: %w[button is-light has-text-weight-semibold is-rounded]
+                  = f.submit '変更を保存する', class: %w[button is-light has-text-weight-semibold is-rounded]
+
+          hr  
+            p.has-text-centered.is-size-7.has-text-grey-light
+              | *記載に関してはアップデート対応予定
