Fix: 画像のpublicフォルダ移行に伴った修正

--- a/app/views/admin/shared/_sidebar.html.slim
+++ b/app/views/admin/shared/_sidebar.html.slim
@@ -1,6 +1,6 @@
 aside.main-sidebar.sidebar-dark-primary.elevation-4
   = link_to admin_root_path, class: 'brand-link' do
-    = image_tag 'buildesk_favicon.png', class: 'brand-image img-circle elevation-3'
+    = image_tag '/images/buildesk_favicon.png', class: 'brand-image img-circle elevation-3'
     span.brand-text.font-weight-light
       | Buildesk
   .sidebar
