--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -25,7 +25,7 @@
       .column
         .media-content
           .media-right
-            = image_tag '/sample.jpg', id: 'post_img_prev', class: 'is-4by3', width: '400'
+            = image_tag '/images/sample.jpg', id: 'post_img_prev', class: 'is-4by3', width: '400'
 
   .field.is-horizontal
     .field-label.is-normal
