--- a/app/views/shared/_before_login_header.html.slim
+++ b/app/views/shared/_before_login_header.html.slim
@@ -2,7 +2,7 @@ nav.is-dark.navbar[role="navigation" aria-label="main navigation"]
   .container
     .navbar-brand
       = link_to root_path, class: 'navbar-item', data: { turbolinks: false }
-          = image_tag 'buildesk_logo.png', size: '112x28'
+          = image_tag '/images/buildesk_logo.png', size: '112x28'
       a.navbar-burger[role="button" aria-label="menu" aria-expanded="false" data-target="navMenu"]
         span[aria-hidden="true"]
         span[aria-hidden="true"]
