--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -4,7 +4,7 @@ header.is-dark.navbar.is-fixed-top[role="navigation" aria-label="main navigation
     .navbar-brand
       .navbar-item
         = link_to root_path, data: { turbolinks: false }
-          = image_tag 'buildesk_logo.png', size: '112x28'
+          = image_tag('/images/buildesk_logo.png', size: '112x28')
       a.navbar-burger[role="button" aria-label="menu" aria-expanded="false" data-target="navMenu"]
         span[aria-hidden="true"]
         span[aria-hidden="true"]
