Fix: レイアウトズレを修正

--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -8,10 +8,10 @@
       = f.input :email, label_html: { class: 'label' }, input_html: { class: 'input' }, error: false
   .field
     .control
-      = f.input :password, label_html: { class: 'label' }, input_html: { class: 'input' }, error: false
+      = f.input :password, label_html: { class: 'label' }, input_html: { class: 'input' }, error: false, required: true
   .field
     .control
-      = f.input :password_confirmation, label_html: { class: 'label' }, input_html: { class: 'input' }, error: false
+      = f.input :password_confirmation, label_html: { class: 'label' }, input_html: { class: 'input' }, error: false, required: true
   .field
     .control
       = f.button :submit, class: %w[has-text-weight-bold button is-success is-fullwidth]
