--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,6 +1,6 @@
 - set_meta_tags title: t('.title')
 
-main.columns.is-centered.section
+main.columns.is-centered.section.is-marginless
   .column.is-one-third
     .container.content.box
       h1.title.has-text-centered.is-size-6 メールアドレスでユーザー登録
