Add: uuidの編集機能を追加

--- a/app/views/profiles/_form.html.slim
+++ b/app/views/profiles/_form.html.slim
@@ -5,8 +5,17 @@
       = f.label :name
     .control.has-icons-left.has-icons-right
       = f.text_field :name, class: 'input'
-      span.icon.is-small.is-left
+      span.icon.is-left
         i.fas.fa-user
+      span.icon
+
+  .field
+    label.label
+      = f.label :uuid
+    .control.has-icons-left.has-icons-right
+      = f.text_field :uuid, class: 'input'
+      span.icon.is-left.has-text-weight-bold
+        | ＠
       span.icon
 
   .field
