--- a/app/views/posts/_post.html.slim
+++ b/app/views/posts/_post.html.slim
@@ -12,7 +12,7 @@
                 = image_tag post.user.image_url(:thumb), class: 'is-rounded'
             .media-content
               p.title.is-6.has-text-weight-semibold
-                = post.user.name
+                = truncate(post.user.name, length: 20)
               p.subtitle.is-6
                 = l post.created_at, format: :short
             .media-right
