--- a/app/views/profiles/_form.html.slim
+++ b/app/views/profiles/_form.html.slim
@@ -44,3 +44,5 @@
   .field.is-grouped
     .control
       = f.submit class: %w[button is-light has-text-weight-semibold is-rounded is-small]
+    .control
+      = link_to 'キャンセル', :back, class: %w[button is-dark has-text-weight-semibold is-rounded is-small]
