Fix: 文言を修正

--- a/app/views/errors/404.html.slim
+++ b/app/views/errors/404.html.slim
@@ -9,14 +9,15 @@ main
             p.title.is-4.has-text-weight-bold.is-spaced
               | お探しのページは見つかりませんでした。
             p.subtitle.is-6
-              | 理想のデスク環境は完成しましたか？
+              | 理想のデスク環境は構築できましたか？
               br
-              | あなたの知見を待っている人がたくさんいます。
+              | あなたが得た知見をぜひ教えてください。
             br
             .field.is-grouped
               p.control
                 = link_to '戻る', :back, class: 'button is-primary has-text-weight-semibold', data: { turbolinks: false }
               p.control
-                = link_to 'デスク/アイテムを投稿する', new_post_path, class: 'button is-primary is-inverted has-text-weight-semibold', data: { turbolinks: false }
+                = link_to 'マイデスク/アイテムを投稿する', new_post_path, class: 'button is-primary is-inverted has-text-weight-semibold', data: { turbolinks: false }
         .column
+          br
           = image_tag('/images/404_image.png')
