Fix: gem hanmotoを利用したエラー表示に変更

--- a/app/views/public_pages/404.html.slim
+++ b/app/views/public_pages/404.html.slim
@@ -1,5 +1,13 @@
 - set_meta_tags og: { og_title: t('.og_title'), description: t('.og_description') }
 
+html.has-navbar-fixed-top
+header.is-dark.navbar.is-fixed-top[role="navigation" aria-label="main navigation"]
+  .container
+    .navbar-brand
+      .navbar-item
+        = link_to root_path, data: { turbolinks: false }
+          = image_tag('/images/buildesk_logo.png', size: '112x28')
+
 main
   .container        
     section.section
@@ -8,7 +16,9 @@ main
           .content
             p.title.is-4.has-text-weight-bold.is-spaced
               | お探しのページは見つかりませんでした。
-            p.subtitle.is-6
+            p
+              | URLに誤りがあるか、お探しのページは移動もしくは削除された可能性があります。
+            p
               | 理想のデスク環境は構築できましたか？
               br
               | あなたが得た知見をぜひ教えてください。
