--- a/app/views/public_pages/500.html.slim
+++ b/app/views/public_pages/500.html.slim
@@ -15,7 +15,7 @@ main
         .column.is-offset-1
           .content
             p.title.is-4.has-text-weight-bold.is-spaced
-              | サーバーエラーが発生しました。
+              = t('.500 Internal Server Error')
             p
               | サーバーの問題でお探しのページを表示できません。
               br
@@ -23,7 +23,7 @@ main
             br
             .field
               p.control
-                = link_to '戻る', :back, class: 'button is-primary has-text-weight-semibold', data: { turbolinks: false }
+                = link_to t('defaults.back'), :back, class: 'button is-primary has-text-weight-semibold', data: { turbolinks: false }
         .column
           br
           = image_tag('/images/500_image.png')
