--- a/app/views/users/non_user.html.slim
+++ b/app/views/users/non_user.html.slim
@@ -17,5 +17,5 @@ main.columns.is-centered.is-marginless
                     p.title.is-4.has-text-weight-bold
                       = 'Not found user'
                     p.subtitle.is-6
-                      = '@正しいアカウント名を入力してください'
+                      = t('.Please enter the correct account name')
                   
