--- a/app/views/layouts/admin_login.html.slim
+++ b/app/views/layouts/admin_login.html.slim
@@ -11,6 +11,7 @@ html
     = csp_meta_tag
 
     = stylesheet_link_tag "admin", media: 'all'
+    = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
   
     = display_meta_tags(default_meta_tags)
 
