Fix: uuidカラム追加に伴う管理画面の修正

--- a/app/views/admin/users/_user.html.slim
+++ b/app/views/admin/users/_user.html.slim
@@ -4,6 +4,8 @@ tr
   td
     = link_to user.name, admin_user_path(user)
   td
+    = user.uuid
+  td
     = user.role
   td
     = l(user.created_at, format: :short)
