--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -23,6 +23,8 @@
         th[scope="col"]
           = t('activerecord.attributes.user.name')
         th[scope="col"]
+          = t('activerecord.attributes.user.uuid')
+        th[scope="col"]
           = t('activerecord.attributes.user.role')
         th[scope="col"]
           = t('activerecord.attributes.user.created_at')
