--- a/app/views/admin/users/edit.html.slim
+++ b/app/views/admin/users/edit.html.slim
@@ -11,6 +11,8 @@
           .box-body
             = f.input :name
 
+            = f.input :uuid
+
             = f.input :email
 
             = f.input :image, as: :file, class: 'form-control mb-3', accept: 'image/*'
