Fix: 不必要な記述の消去とレイアウト崩れを修正

--- a/app/views/admin/items/show.html.slim
+++ b/app/views/admin/items/show.html.slim
@@ -2,7 +2,7 @@
 
 .container
   .row
-    .col-md-10.offset-md-1.col-lg-8.offset-lg-2
+    .col-lg-10
       h1
         = t('.title')
       .text-right.mb-3
