Add: 画像ファイルをawsのCloudFront-S3経由でやりとりするための設定を追加

--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -1,6 +1,6 @@
 - set_meta_tags og: { og_title: t('.og_title'), description: t('.og_description') }
 
-section.hero.hero-1.is-medium[style="background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url(#{asset_path('/images/vadim-sherbakov-RcdV8rnXSeE-unsplash.jpg')})"]
+section.hero.hero-1.is-medium[style="background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url('https://image.buildesk.app/images/buildesk-main.jpg')"]
   .hero-body
     .container
       p.title.has-text-weight-bold
