--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -11,6 +11,7 @@ header.is-dark.navbar.is-fixed-top[role="navigation" aria-label="main navigation
         span[aria-hidden="true"] 
     #navMenu.navbar-menu
       .navbar-end
+        = link_to t('posts.index.title'), posts_path, class: 'navbar-item', data: { turbolinks: false }
         = link_to '新規投稿', new_post_path, class: 'navbar-item', data: { turbolinks: false }
         .navbar-item.has-dropdown.is-hoverable
           a.navbar-link
